# NetBanter

./: CMakeLists.txt  README.md  vcpkg.json
chat-client/: CMakeLists.txt
chat-client/include/: Application.hpp
chat-client/include/fsms/: ChatState.hpp  EnterState.hpp  ExitState.hpp  LoginState.hpp  MainMenuState.hpp  RegistrationState.hpp  State.hpp  StateMachine.hpp
chat-client/include/states/: ChatState.hpp  EnterState.hpp  ExitState.hpp  LoginState.hpp  MainMenuState.hpp  RegistrationState.hpp
chat-client/src/: Application.cpp  Main.cpp
chat-client/src/fsms/: ChatState.cpp  EnterState.cpp  ExitState.cpp  LoginState.cpp  MainMenuState.cpp  RegistrationState.cpp  StateMachine.cpp
chat-client/src/states/: ChatState.cpp  EnterState.cpp  ExitState.cpp  LoginState.cpp  MainMenuState.cpp  RegistrationState.cpp
chat-engine/: CMakeLists.txt
chat-engine-tests/: CMakeLists.txt
chat-engine-tests/src/authentications/: AuthResultTests.cpp  AuthenticatorTests.cpp  PasswordHasherTests.cpp
chat-engine-tests/src/clients/: ClientManagerTests.cpp  ClientTests.cpp
chat-engine-tests/src/fsms/: StateMachineTests.cpp
chat-engine-tests/src/messages/: MessageTests.cpp
chat-engine-tests/src/sessions/: LoginResultTests.cpp
chat-engine-tests/src/users/: UserRepositoryTests.cpp  UserTests.cpp
chat-engine/include/authentications/: AuthResult.hpp  Authenticator.hpp  PasswordHasher.hpp
chat-engine/include/clients/: Client.hpp  ClientManager.hpp
chat-engine/include/fsms/: StateMachine.hpp
chat-engine/include/messages/: DeliveryResult.hpp  Message.hpp  Messenger.hpp
chat-engine/include/networks/: NetworkSystem.hpp  TcpServer.hpp  TcpSocket.hpp
chat-engine/include/parsers/: CommandParser.hpp
chat-engine/include/sessions/: LoginResult.hpp
chat-engine/include/states/: State.hpp
chat-engine/include/users/: User.hpp  UserRepository.hpp
chat-engine/src/authentications/: AuthResult.cpp  Authenticator.cpp  PasswordHasher.cpp
chat-engine/src/clients/: Client.cpp  ClientManager.cpp
chat-engine/src/fsms/: StateMachine.cpp
chat-engine/src/messages/: DeliveryResult.cpp  Message.cpp  Messenger.cpp
chat-engine/src/networks/: NetworkSystem.cpp  TcpServer.cpp  TcpSocket.cpp
chat-engine/src/parsers/: CommandParser.cpp
chat-engine/src/sessions/: LoginResult.cpp
chat-engine/src/users/: User.cpp  UserRepository.cpp
chat-server/: CMakeLists.txt
chat-server/include/: Server.hpp
chat-server/include/fsms/: AuthenticatedState.hpp  SessionState.hpp  SessionStateMachine.hpp  UnauthenticatedState.hpp
chat-server/include/sessions/: Session.hpp
chat-server/include/states/: AuthenticatedState.hpp  UnauthenticatedState.hpp
chat-server/src/: Main.cpp  Server.cpp
chat-server/src/fsms/: AuthenticatedState.cpp  SessionStateMachine.cpp  UnauthenticatedState.cpp
chat-server/src/sessions/: Session.cpp
chat-server/src/states/: AuthenticatedState.cpp  UnauthenticatedState.cpp
